--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -13,9 +13,9 @@
 
 </h1>
 
-
-<img src="../images/madspildbagrund.png" height="1080" width="720">
-    
+<div class="imagefullsize">
+<img src="/images/madspildbagrund.png" alt="test">
+</div>
 
      
      
