--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -14,7 +14,12 @@
 </h1>
 
 
-<img src="../images/madspildbagrund.png" height="1080" width="720">
+<div class="responsive">
+
+    <img src="images/madspildbagrund.png" alt="front image">
+
+</div>
+
     
 
      
