--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -3,22 +3,30 @@
 <head>
     <link rel="stylesheet" href="Forside.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Frontpage</title>
 </head>
 <body>
 
-<h1>
 
-    Undgå madspild.
-
-</h1>
-
-
-<div class="responsive">
-
-    <img src="images/madspildbagrund.png" alt="front image">
+<div class="topnav">
+    <a class="active" href="#Forside">Forside</a>
+    <a href="#Foodbanks i KBH">Foodbanks i KBH</a>
+    <a href="#Læs mere">Læs mere</a>
 
 </div>
+
+
+<h1> Red Mad <br> Hjælp Planeten </h1>
+
+    <div class="responsive">
+
+
+        <img src="images/MadspildForside.png" alt="front image">
+
+    </div>
+
+
+
 
     
 
