--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -3,8 +3,27 @@
 <head>
     <link rel="stylesheet" href="Forside.css">
     <meta charset="UTF-8">
+
     <title>Frontpage</title>
+
+
+    <Style>
+        body {
+
+            background-image: url("images/MadspildForside.png ");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+
+
+        }
+
+
+    </Style>
+
+
 </head>
+
 <body>
 
 
@@ -18,12 +37,13 @@
 
 <h1> Red Mad <br> Hjælp Planeten </h1>
 
-    <div class="responsive">
 
 
-        <img src="images/MadspildForside.png" alt="front image">
 
-    </div>
+
+
+
+
 
 
 
