--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -24,9 +24,10 @@
 
 
 <div class="topnav">
-    <a class="active" href="#Forside">Forside</a>
-    <a href="#Foodbanks i KBH">Foodbanks i KBH</a>
-    <a href="#Læs mere">Læs mere</a>
+    <a class="active" href="/">Forside</a>
+    <a href="/EmptyFridge">Tøm køleskab</a>
+    <a href="/foodbank">Foodbanks i KBH</a>
+    <a href="/ReadMore">Læs mere</a>
 
 </div>
 
