--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -8,11 +8,14 @@
 <body>
 
 <div class="topnav">
-    <a class="active" href="#Forside">Forside</a>
-    <a href="#Foodbanks i KBH">Foodbanks i KBH</a>
-    <a href="#Læs mere">Læs mere</a>
+    <a class="active" href="/">Forside</a>
+    <a href="/EmptyFridge">Tøm køleskab</a>
+    <a href="/foodbank">Foodbanks i KBH</a>
+    <a href="/ReadMore">Læs mere</a>
 
 </div>
+
+<div class="mapouter"><div class="gmap_canvas"><iframe width="1000" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=f%C3%B8devarebanken&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/">nordvpn deals</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:1000px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1000px;}</style></div>
 
 
 
