--- a/MadSpildProjekt/src/main/resources/templates/ReadMore.html
+++ b/MadSpildProjekt/src/main/resources/templates/ReadMore.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="ReadMore.css">
     <meta charset="UTF-8">
     <title>Læs mere</title>
 </head>
