--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" href="EmptyFridge.css">
     <meta charset="UTF-8">
     <title>Tøm køleskab</title>
+
+    <Style>
+        body {
+
+            background-image: url("images/Empty fridge.jpg ");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </Style>
+
 </head>
 <body>
 
