added recipe columns

--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -64,9 +64,17 @@
 </script>
 
 <div class="row">
-    <a href="#recipe1"> <div class="column" style="background-image: url(/images/MadspildForside.png);background-size: 100% 200px"></div> </a>
-    <a href="#recipe2"> <div class="column" style="background-image: url(/images/MadspildForside.png);background-size: 100% 200px"></div> </a>
-    <a href="#recipe3"> <div class="column" style="background-image: url(/images/MadspildForside.png);background-size: 100% 200px"></div> </a>
+    <a href="#recipe1"> <div class="column" style="background-image: url(/images/1.png);background-size: 100% 100%"></div> </a>
+    <a href="#recipe2"> <div class="column" style="background-image: url(/images/2.png);background-size: 100% 100%"></div> </a>
+    <a href="#recipe3"> <div class="column" style="background-image: url(/images/3.png);background-size: 100% 100%"></div> </a>
+
+
+</div>
+
+<div class="row">
+    <a href="#recipe1"> <div class="column" style="background-image: url(/images/4.png);background-size: 100% 100%"></div> </a>
+    <a href="#recipe2"> <div class="column" style="background-image: url(/images/5.png);background-size: 100% 100%"></div> </a>
+    <a href="#recipe3"> <div class="column" style="background-image: url(/images/6.png);background-size: 100% 100%"></div> </a>
 
 
 </div>
