--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -28,7 +28,7 @@
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
-<ul id="myUL">
+<ul id="myUL" style="display: none">
     <li><a href="#">Adele</a></li>
     <li><a href="#">Agnes</a></li>
 
@@ -44,23 +44,29 @@
 <script>
     function myFunction() {
         // Declare variables
-        var input, filter, ul, li, a, i, txtValue;
+        var input, filter, ul, li, a, i;
         input = document.getElementById('myInput');
         filter = input.value.toUpperCase();
         ul = document.getElementById("myUL");
         li = ul.getElementsByTagName('li');
 
+        if(input.value.length == 0){
+            ul.style.display = "none";
+            return;
+        }else{
+            ul.style.display = "block";
+        }
         // Loop through all list items, and hide those who don't match the search query
         for (i = 0; i < li.length; i++) {
             a = li[i].getElementsByTagName("a")[0];
-            txtValue = a.textContent || a.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                li[i].style.display = "";
+            if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = "block";
             } else {
                 li[i].style.display = "none";
             }
         }
     }
+
 </script>
 
 <div class="row">
