søg på billeder tilføjet

--- a/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
+++ b/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
@@ -62,9 +62,10 @@
 
 .column {
     float: left;
-    width: 16.6667%;
+    width: 31%;
     padding: 15px;
     height: 300px; /* Should be removed. Only for demonstration */
+    visibility: hidden;
 }
 
 /* Clear floats after the columns */
