--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -37,7 +37,7 @@
 
     <li><a href="#">Calvin</a></li>
     <li><a href="#">Christina</a></li>
-    <li><a href="#">Cindy</a></li>
+    <li><a href="">Cindy</a></li>
 </ul>
 
 
@@ -78,6 +78,11 @@
 
 
 </div>
+
+
+
+
+
 
 </body>
 </html>
