--- a/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
+++ b/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
@@ -76,3 +76,25 @@
     padding: 5px ;
 }
 
+.empty_fridge__search-ingredient {
+    display: inline-block;
+    vertical-align: top;
+    white-space: nowrap;
+    font-size: 16px;
+    line-height: 19px;
+    position: relative;
+    background-color: #fff;
+    color: #384241;
+    border: 1px solid #384241;
+    border-radius: 50em;
+    padding: 7px 35px 7px 15px;
+    cursor: pointer;
+    margin: 0 3px 10px;
+    text-transform: capitalize;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+
+
