--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -26,10 +26,10 @@
 
 </div>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for ingredients..">
 
 <ul id="myUL" style="display: none">
-    <li><a href="#">Adele</a></li>
+
     <li><a href="#">Agnes</a></li>
 
     <li><a href="#">Billy</a></li>
@@ -73,6 +73,7 @@
     <a href="#recipe1"> <div class="column" style="background-image: url(/images/1.png);background-size: 100% 100%"></div> </a>
     <a href="#recipe2"> <div class="column" style="background-image: url(/images/2.png);background-size: 100% 100%"></div> </a>
     <a href="#recipe3"> <div class="column" style="background-image: url(/images/3.png);background-size: 100% 100%"></div> </a>
+
 
 
 </div>
