Rettet class='active' til hver html side

--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -8,9 +8,9 @@
 <body>
 
 <div class="topnav">
-    <a class="active" href="/">Forside</a>
+    <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
-    <a href="/foodbank">Foodbanks i KBH</a>
+    <a class="active" href="/foodbank">Foodbanks i KBH</a>
     <a href="/ReadMore">Læs mere</a>
 
 </div>
