--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -19,8 +19,8 @@
 <body>
 
 <div class="topnav">
-    <a class="active" href="/">Forside</a>
-    <a href="/EmptyFridge">Tøm køleskab</a>
+    <a href="/">Forside</a>
+    <a class="active" href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
     <a href="/ReadMore">Læs mere</a>
 
