--- a/MadSpildProjekt/src/main/resources/templates/ReadMore.html
+++ b/MadSpildProjekt/src/main/resources/templates/ReadMore.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class="topnav">
-    <a class="active" href="/">Forside</a>
+    <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
-    <a href="/ReadMore">Læs mere</a>
+    <a class="active" href="/ReadMore">Læs mere</a>
 
 </div>
 
