--- a/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
+++ b/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
@@ -27,7 +27,7 @@
 }
 
 
-#myInput {
+#text {
     background-image: url("/images/searching.png"); /* Add a search icon to input */
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
@@ -76,24 +76,27 @@
 }
 
 .empty_fridge__search-ingredient {
-    display: inline-block;
-    vertical-align: top;
+    display:flex;
+    list-style: none;
     white-space: nowrap;
-    font-size: 16px;
-    line-height: 19px;
-    position: relative;
-    background-color: #fff;
-    color: #384241;
-    border: 1px solid #384241;
-    border-radius: 50em;
-    padding: 7px 35px 7px 15px;
-    cursor: pointer;
-    margin: 0 3px 10px;
-    text-transform: capitalize;
-    max-width: 100%;
+    font-size:16px;
+    line-height:19px;
+    text-transform:capitalize;
     text-overflow: ellipsis;
-    overflow: hidden;
+    margin:1rem 0;
+    padding-inline-start: 0;
 }
+
+.empty_fridge__search-ingredient li {
+    background-color:#fff;
+    border:1px solid #384241;
+    border-radius:50em;
+    padding:7px 35px;
+    margin: 0 3px 10px;
+    cursor:pointer;
+}
+
+
 
 
 
