--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -26,20 +26,26 @@
 
 </div>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for ingredients..">
+<div>
+<input type="text" id="text" onkeyup="myFunction()" placeholder="Search for ingredients..">
+    <button id="add">Add</button>
+</div>
 
 <ul id="myUL" style="display: none">
 
-    <li><a href="#">Agnes</a></li>
+    <li><a href="#">Kylling</a></li>
 
     <li><a href="#">Billy</a></li>
     <li><a href="#">Bob</a></li>
 
     <li><a href="#">Calvin</a></li>
     <li><a href="#">Christina</a></li>
-    <li><a href="">Cindy</a></li>
+    <li><a href="#">Cindy</a></li>
 </ul>
 
+<ul class="empty_fridge__search-ingredient" id="list">
+
+</ul>
 
 
 
@@ -47,7 +53,7 @@
     function myFunction() {
         // Declare variables
         var input, filter, ul, li, a, i;
-        input = document.getElementById('myInput');
+        input = document.getElementById('text');
         filter = input.value.toUpperCase();
         ul = document.getElementById("myUL");
         li = ul.getElementsByTagName('li');
@@ -69,6 +75,23 @@
         }
     }
 
+</script>
+
+<script>
+    (function () {
+        document.querySelector('#add').addEventListener('click', function () {
+            let input = document.querySelector('#text');
+            let list = document.querySelector('#list');
+
+            let item = document.createElement('li'); // create li node
+            let itemText = document.createTextNode(input.value); // create text node
+
+            item.appendChild(itemText); // append text node to li node
+            list.appendChild(item); // append li node to list
+
+            input.value = ""; // clear input
+        });
+    })();
 </script>
 
 <div class="row">
