Stylet topnav og de fleste elemter i 'Tøm Køleskabet' samt tilføjet et Gobalt Stylesheet som gerne skulle ensrette vores topnav og gøre det muligt at rette topnav på alle sider på een gang (Den deriller dog lidt lige nu)

--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="EmptyFridge.css">
+    <link rel="stylesheet" href="GlobalStylesheet.css">
+
     <meta charset="UTF-8">
     <title>Tøm køleskab</title>
 
@@ -26,8 +28,10 @@
 
 </div>
 
-<div>
-<input type="text" id="text" onkeyup="myFunction()" placeholder="Search for ingredients..">
+<br/>
+
+<div class="searchbox">
+<input type="text" id="text" onkeyup="myFunction()" placeholder="Jeg vil lave mad som indeholder..">
     <button id="add">Add</button>
 </div>
 
