--- a/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
+++ b/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
@@ -1,34 +1,8 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: black;
-    overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: #ffffff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #44D7B6;
-    color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #44D7B6;
-    color: white;
-}
 
 
 #text {
     background-image: url("/images/searching.png"); /* Add a search icon to input */
+    background-size: 20px;
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
     width: 100%; /* Full-width */
@@ -62,7 +36,7 @@
 
 .column {
     float: left;
-    width: 31%;
+    width: 28%;
     padding: 15px;
     height: 300px; /* Should be removed. Only for demonstration */
 }
@@ -96,6 +70,19 @@
     cursor:pointer;
 }
 
+div.searchbox {
+    max-width: 500px;
+    margin: auto;
+    border-radius: 25px;
+    padding: 20px;
+}
+
+input {
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    border:solid 1px black;
+    padding:5px;
+}
 
 
 
