--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="FoodBank.css">
+    <link rel="stylesheet" href="GlobalStylesheet.css">
+
     <meta charset="UTF-8">
     <title>FoodBank</title>
 </head>
