--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="Forside.css">
+    <link rel="stylesheet" href="GlobalStylesheet.css">
+
     <meta charset="UTF-8">
 
     <title>Frontpage</title>
