--- a/MadSpildProjekt/src/main/resources/templates/ReadMore.html
+++ b/MadSpildProjekt/src/main/resources/templates/ReadMore.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="ReadMore.css">
+    <link rel="stylesheet" href="GlobalStylesheet.css">
+
     <meta charset="UTF-8">
     <title>Læs mere</title>
 </head>
