tilføjede colum til foodbanks, lavede design mere brugervenligt. lavede læs mere om til hent e-bog

--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -24,7 +24,7 @@
     <a href="/">Forside</a>
     <a class="active" href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
-    <a href="/ReadMore">Læs mere</a>
+    <a href="/ReadMore">Hent E-Bog</a>
 
 </div>
 
