--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -28,7 +28,7 @@
     <a class="active" href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
-    <a href="/ReadMore">Læs mere</a>
+    <a href="/ReadMore">Hent E-Bog</a>
 
 </div>
 
