--- a/MadSpildProjekt/src/main/resources/static/GlobalStylesheet.css
+++ b/MadSpildProjekt/src/main/resources/static/GlobalStylesheet.css
@@ -46,16 +46,18 @@ h1 {
 
 /* FOODBANK STYLING FOODBANK STYLING FOODBANK STYLING FOODBANK STYLING FOODBANK STYLING */
 
-.mapouter{position:relative;text-align:center;height:500px;width:1000px }
+.mapouter{position:relative;text-align:center;height:500px;width:50% }
 .gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1000px;}
 
 iframe {
-    width: 1000px;
+    width: 100%;
     height: 500px;
     position: absolute;
     top: 0;
     left: 0;
-    margin-left: 20%;
+    margin-bottom: 20px;
+    margin-outside: 20px;
+    margin-left: 2%;
 }
 
 table, th, td {
