--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -3,6 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="GlobalStylesheet.css">
+    <link rel="stylesheet " href="Foodbank.css">
 
     <meta charset="UTF-8">
     <title>FoodBank</title>
@@ -13,13 +14,68 @@
     <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a class="active" href="/foodbank">Foodbanks i KBH</a>
-    <a href="/ReadMore">Læs mere</a>
+    <a href="/ReadMore">Hent E-Bog</a>
 
 </div>
+
+
+<h1>
+
+Oversigt over Foodbanks i København
+
+</h1>
+
+
+
+<div class="row">
+    <div class="column">
+        <h2>
+            Hvorfor skal du købe mad hos en fødevarebank?
+        </h2>
+        <p class="big">
+
+            Hvert år smider danskerne mere end 700.000 tons mad ud. Det svarer til, at hver femte indkøbsvogn ender direkte i skraldespanden. Det skader både pengepungen og klimaet.
+
+            Samtidig sulter flere end 800 millioner mennesker på verdensplan. Det er en meningsløs ubalance mellem overflod og mangel.
+
+            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud. Vi kalder det et win-win-win koncept:
+
+            Wefood mindsker madspild, du køber varer, som intet fejler til en fordelagtig pris, og overskuddet går til mennesker i nød.
+        </p>
+
+
+
+    </div>
+    <div class="column"></div>
+
+    <h2>
+        Wefood på Nørrebro
+    </h2>
+
+    <img src="https://wefood.noedhjaelp.dk/wp-content/uploads/2019/08/noerrebro-600x600.jpg">
+
+
+</div>
+
+
+<h2>
+
+    Find den fødevare bank der er tættest på dig.
+
+</h2>
+
 
 <div class="mapouter"><div class="gmap_canvas" >
     <iframe src="https://maps.google.com/maps?q=f%C3%B8devarebanken&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" ></iframe>
 </div> </div>
+
+
+<h2
+
+    I tabellen herunder finder du links til alle de butikker <br>
+    Der tilbyder samme koncept som wefood.
+
+</h2>
 
 <table id="t01" style="width:100%">
     <tr>
@@ -30,31 +86,31 @@
     </tr>
 
     <tr>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
+        <td><a href="https://foodsharingcph.org"> Wefood NV</a></td>
+        <td><a href="https://foodsharingcph.org"> Folkekirken </a></td>
+        <td><a href="https://foodsharingcph.org"> Netto Genbrug </a></td>
+        <td><a href="https://foodsharingcph.org"> Fakta Recycle </a></td>
+    </tr>
+
+    <tr>
+        <td><a href="https://foodsharingcph.org"> Reffen</a></td>
+        <td><a href="https://foodsharingcph.org"> Coop Extra</a></td>
+        <td><a href="https://foodsharingcph.org"> Wefood Valby</a></td>
         <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
     </tr>
 
     <tr>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
+        <td><a href="https://foodsharingcph.org"> To good to Go</a></td>
+        <td><a href="https://foodsharingcph.org"> Recycled FRB</a></td>
+        <td><a href="https://foodsharingcph.org"> Upcycle indreby</a></td>
+        <td><a href="https://foodsharingcph.org"> Wefood Vanløse</a></td>
     </tr>
 
     <tr>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-    </tr>
-
-    <tr>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
-        <td><a href="https://foodsharingcph.org"> Food Sharing CPH</a></td>
+        <td><a href="https://foodsharingcph.org"> Fakta genbrugsmad</a></td>
+        <td><a href="https://foodsharingcph.org"> Wefood Frb</a></td>
+        <td><a href="https://foodsharingcph.org"> To good to go</a></td>
+        <td><a href="https://foodsharingcph.org"> Kronen Vanløse</a></td>
     </tr>
 
 </table>
