--- a/MadSpildProjekt/src/main/resources/templates/ReadMore.html
+++ b/MadSpildProjekt/src/main/resources/templates/ReadMore.html
@@ -13,9 +13,11 @@
     <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
-    <a class="active" href="/ReadMore">Læs mere</a>
+    <a class="active" href="/ReadMore">Hent E-Bog</a>
 
 </div>
+
+b
 
 </body>
 </html>
