--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -58,6 +58,7 @@
         input = document.getElementById('text');
         filter = input.value.toUpperCase();
         if (event.keyCode == 13) {
+            event.preventDefault();
             addToList();
         }
 
