--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -21,6 +21,7 @@
 <body>
 
 <div class="topnav">
+    <div class="header"></div>
     <a href="/">Forside</a>
     <a class="active" href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
