--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -25,6 +25,7 @@
 
 
 <div class="topnav">
+    <div class="header"></div>
     <a class="active" href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
