--- a/MadSpildProjekt/src/main/resources/templates/ReadMore.html
+++ b/MadSpildProjekt/src/main/resources/templates/ReadMore.html
@@ -3,6 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="GlobalStylesheet.css">
+    <link rel="stylesheet" href="Readmore.css">
 
     <meta charset="UTF-8">
     <title>Læs mere</title>
@@ -10,6 +11,7 @@
 <body>
 
 <div class="topnav">
+    <div class="header"></div>
     <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
@@ -17,7 +19,50 @@
 
 </div>
 
-b
+
+
+
+
+<div class="row">
+    <div class="column">
+        <h2>
+
+            Hent e-bogen og bekæmp madspild
+
+        </h2>
+
+        <p class="big">
+
+            Sammen med kokken Jesper Vollmer har vi lavet med e-bogen ‘Red maden’,
+            som du kan ved at klikke på knappen "Download E-bog". Bogen "Red Maden" indeholder tips og tricks til at
+            undgå madspild i dit eget køkken samt en stor samling klimavenlige opskrifter.
+
+        </p>
+
+
+        <a href="https://wefood.noedhjaelp.dk/red-maden" class="myButton">Download E-bog</a>
+
+
+    </div>
+
+    <div class="column"></div>
+
+    <h2>
+        Udviklet i samarbejde med Jesper Vollmer.
+    </h2>
+
+    <img src="https://wefood.noedhjaelp.dk/wp-content/uploads/2019/08/jesper-vollmer-wefood.jpg">
+
+
+</div>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
