--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -11,6 +11,7 @@
 <body>
 
 <div class="topnav">
+    <div class="header"></div>
     <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a class="active" href="/foodbank">Foodbanks i KBH</a>
@@ -46,6 +47,7 @@ Oversigt over Foodbanks i København
 
 
     </div>
+
     <div class="column"></div>
 
     <h2>
