--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -35,12 +35,12 @@
 <input type="text" id="text" onkeyup="myFunction(event)" placeholder="Jeg vil lave mad som indeholder..">
 </div>
 
-<ul id="myUL" style="display: none">
+<ul id="myUL" style="display: none" >
 
     <li onclick="addListItem(event)" ><a>Kylling</a></li>
 
     <li onclick="addListItem(event)" ><a>Tomat</a></li>
-    <li onclick="addListItem(event)" ><a>blåbær</a></li>
+    <li onclick="addListItem(event)" ><a>Blåbær</a></li>
 
     <li onclick="addListItem(event)" ><a>Avocado</a></li>
     <li onclick="addListItem(event)" ><a>Laks</a></li>
@@ -64,7 +64,7 @@
             },
             {"name" : "recipe2",
                 "image" : "/images/2.png",
-                "ingredients" : ["blåbær"],
+                "ingredients" : ["Blåbær"],
                 "url" : "https://www.google.dk"
             },
             {"name" : "recipe3",
