--- a/MadSpildProjekt/src/main/resources/static/Foodbank.css
+++ b/MadSpildProjekt/src/main/resources/static/Foodbank.css
@@ -1,3 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
+*{font-family: 'Montserrat', sans-serif;}
+
+.topnav {
+    background-color: #ffffff;
+    display: block;
+    text-align: center;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    display: inline-block;
+    color: #fefff3;
+    background-color: rgba(153, 68, 215, 0.3);
+    border-radius: 25px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 28px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #9944D7B6;
+    border-radius: 25px;
+    color: #ffffff;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #9944D7B6;
+    border-radius: 25px;
+    color: white;
+}
+
+/* FRONTPAGE STYLING FRONTPAGE STYLING FRONTPAGE STYLING FRONTPAGE STYLING FRONTPAGE STYLING */
+/* h1 styling*/
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+    font-size: 75px;
+    color: #44D7B6;
+    letter-spacing: -0.27px;
+    text-align: center;}
+
+/* FOODBANK STYLING FOODBANK STYLING FOODBANK STYLING FOODBANK STYLING FOODBANK STYLING */
+
+.mapouter{position:relative;text-align:center;height:500px;width:50% }
+.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1000px;}
+
+iframe {
+    width: 100%;
+    height: 500px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-bottom: 20px;
+    margin-outside: 20px;
+    margin-left: 2%;
+}
+
+table, th, td {
+    border: #eeeeee;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 7px;
+    text-align: left;
+}
+#t01 tr:nth-child(even) {
+    background-color: #eee;
+}
+#t01 tr:nth-child(odd) {
+    background-color: #fff;
+}
+#t01 th {
+    background-color: black;
+    color: white;
+}
+
 p.big {
 
 
@@ -8,28 +90,13 @@ p.big {
 
 
 }
-
-h1 {
-
-    color: #44D7B6;
-    font-family: Montserrat;
-    font-weight: bolder;
-    alignment: center;
-    padding-right: 200px;
-    padding-left: 200px;
+.header {
+    background-image: url("images/logo4.png") ;
 
 
-}
+    background-position: left;
 
-.column {
-    float: left;
-    width: 50%;
-    margin-left: 2%;
-}
+    height: 100px;
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+    width: 237px;
 }
