--- a/MadSpildProjekt/src/main/resources/static/GlobalStylesheet.css
+++ b/MadSpildProjekt/src/main/resources/static/GlobalStylesheet.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-*{font-family: 'Montserrat', sans-serif;}
+*{font-family: 'Montserrat', sans-serif;
+    margin:0;
+    padding:0;}
+
 
 .topnav {
-    text-align: center;
-    background-color: transparent;
+    padding-bottom: 40px;
     overflow: hidden;
-}
+    background-color: #ffffff;
+    display: block;
+    text-align: center;
 
+}
 /* Style the links inside the navigation bar */
 .topnav a {
     display: inline-block;
