--- a/MadSpildProjekt/src/main/resources/static/Foodbank.css
+++ b/MadSpildProjekt/src/main/resources/static/Foodbank.css
@@ -24,7 +24,8 @@ h1 {
 .column {
     float: left;
     width: 50%;
-    margin-left: 2%;
+    margin-left: 5%;
+    margin-inside: 5%;
 }
 
 /* Clear floats after the columns */
