--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="GlobalStylesheet.css">
     <link rel="stylesheet " href="Foodbank.css">
+    <link rel="stylesheet" href="footer.css">
 
     <meta charset="UTF-8">
     <title>FoodBank</title>
@@ -21,9 +22,9 @@
 
 
 <h1>
-
+<br>
 Oversigt over Foodbanks i København
-
+<br>
 </h1>
 
 
@@ -35,13 +36,13 @@ Oversigt over Foodbanks i København
         </h2>
         <p class="big">
 
-            Hvert år smider danskerne mere end 700.000 tons mad ud. Det svarer til, at hver femte indkøbsvogn ender direkte i skraldespanden. Det skader både pengepungen og klimaet.
+            Hvert år smider danskerne mere end 700.000 tons mad ud. <br> Det svarer til, at hver femte indkøbsvogn ender direkte i skraldespanden. <br> Det skader både pengepungen og klimaet.
 
-            Samtidig sulter flere end 800 millioner mennesker på verdensplan. Det er en meningsløs ubalance mellem overflod og mangel.
+            Samtidig sulter flere end 800 millioner mennesker på verdensplan. <br> Det er en meningsløs ubalance mellem overflod og mangel. <br>
 
-            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud. Vi kalder det et win-win-win koncept:
+            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. <br> Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. <br> I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud. <br> Vi kalder det et win-win-win koncept: <br>
 
-            Wefood mindsker madspild, du køber varer, som intet fejler til en fordelagtig pris, og overskuddet går til mennesker i nød.
+            Wefood mindsker madspild, du køber varer, som intet fejler <br> til en fordelagtig pris, og overskuddet går til mennesker i nød.
         </p>
 
 
@@ -61,9 +62,9 @@ Oversigt over Foodbanks i København
 
 
 <h2>
-
+    <br>
     Find den fødevare bank der er tættest på dig.
-
+    <br>
 </h2>
 
 
@@ -72,11 +73,13 @@ Oversigt over Foodbanks i København
 </div> </div>
 
 
-<h2
 
-    I tabellen herunder finder du links til alle de butikker <br>
+<h2>
+
+    <br>
+    I tabellen herunder finder du links til alle de butikker
     Der tilbyder samme koncept som wefood.
-
+    <br>
 </h2>
 
 <table id="t01" style="width:100%">
@@ -117,6 +120,57 @@ Oversigt over Foodbanks i København
 
 </table>
 
+
+
+<div class="three-column-footer-contact-form-container">
+    <footer class="three-column-footer-contact-form" data-equalizer data-equalize-by-row="true">
+        <div class="footer-left" data-equalizer-watch>
+            <div class="baseline">
+                <div class="contact-details">
+                    <h5>Kontakt os</h5>
+                    <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> + 45 28 87 39 38</p>
+                    <p><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> kea@SpamMail.dk</a></p>
+                    <p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Lygten 37, Nørrebro, København, Danmark</p>
+                </div>
+                <div class="newsletter">
+                    <div class="input-group">
+                        <h5>Få 10 gode tips til at undgå madspild</h5>
+                        <input class="input-group-field" type="email" placeholder="Email address">
+                    </div>
+                    <a class="button expanded" href="#">Send</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-center" data-equalizer-watch>
+            <div class="baseline">
+                <div class="newsletter">
+                    <h5>Send os feedback på siden.</h5>
+                    <div class="input-group">
+                        <input class="input-group-field" type="text" placeholder="Name">
+                        <input class="input-group-field" type="email" placeholder="Email address">
+                        <textarea placeholder="Message"></textarea>
+                    </div>
+                    <a class="button expanded" href="#">Send Feedback</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-right" data-equalizer-watch>
+            <div class="baseline">
+                <img class="thumbnail" src="images/footer%20logo.png">
+                <h5>Udviklet af:</h5>
+                <p>Simon Klejnstrup</p>
+                <p>Thomas Simonsen</p>
+                <p>Mikkel Frederiksen</p>
+                <div class="social">
+                    <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
 
 
 
