--- a/MadSpildProjekt/src/main/resources/templates/ReadMore.html
+++ b/MadSpildProjekt/src/main/resources/templates/ReadMore.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="GlobalStylesheet.css">
     <link rel="stylesheet" href="Readmore.css">
+    <link rel="stylesheet" href="footer.css">
 
     <meta charset="UTF-8">
     <title>Læs mere</title>
@@ -20,6 +21,12 @@
 </div>
 
 
+
+<h1>
+    <br>
+    Gratis E-bog
+    <br>
+</h1>
 
 
 
@@ -55,6 +62,58 @@
 
 
 </div>
+
+
+<div class="three-column-footer-contact-form-container">
+    <footer class="three-column-footer-contact-form" data-equalizer data-equalize-by-row="true">
+        <div class="footer-left" data-equalizer-watch>
+            <div class="baseline">
+                <div class="contact-details">
+                    <h5>Kontakt os</h5>
+                    <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> + 45 28 87 39 38</p>
+                    <p><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> kea@SpamMail.dk</a></p>
+                    <p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Lygten 37, Nørrebro, København, Danmark</p>
+                </div>
+                <div class="newsletter">
+                    <div class="input-group">
+                        <h5>Få 10 gode tips til at undgå madspild</h5>
+                        <input class="input-group-field" type="email" placeholder="Email address">
+                    </div>
+                    <a class="button expanded" href="#">Send</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-center" data-equalizer-watch>
+            <div class="baseline">
+                <div class="newsletter">
+                    <h5>Send os feedback på siden.</h5>
+                    <div class="input-group">
+                        <input class="input-group-field" type="text" placeholder="Name">
+                        <input class="input-group-field" type="email" placeholder="Email address">
+                        <textarea placeholder="Message"></textarea>
+                    </div>
+                    <a class="button expanded" href="#">Send Feedback</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-right" data-equalizer-watch>
+            <div class="baseline">
+                <img class="thumbnail" src="images/footer%20logo.png">
+                <h5>Udviklet af:</h5>
+                <p>Simon Klejnstrup</p>
+                <p>Thomas Simonsen</p>
+                <p>Mikkel Frederiksen</p>
+                <div class="social">
+                    <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+
 
 
 
