--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -12,7 +12,6 @@
 <body>
 
 <div class="topnav">
-    <div class="header"></div>
     <a href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a class="active" href="/foodbank">Foodbanks i KBH</a>
@@ -36,11 +35,7 @@ Oversigt over Foodbanks i København
         </h2>
         <p class="big">
 
-            Hvert år smider danskerne mere end 700.000 tons mad ud. <br> Det svarer til, at hver femte indkøbsvogn ender direkte i skraldespanden. <br> Det skader både pengepungen og klimaet.
-
-            Samtidig sulter flere end 800 millioner mennesker på verdensplan. <br> Det er en meningsløs ubalance mellem overflod og mangel. <br>
-
-            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. <br> Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. <br> I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud. <br> Vi kalder det et win-win-win koncept: <br>
+            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud. Vi kalder det et win-win-win koncept:
 
             Wefood mindsker madspild, du køber varer, som intet fejler <br> til en fordelagtig pris, og overskuddet går til mennesker i nød.
         </p>
