--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -12,10 +12,8 @@
     <Style>
         body {
 
-            background-image: url("images/MadspildForside.png ");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
+            background-image: url("images/FoodMarket.jpg");
+
         }
     </Style>
 
@@ -26,7 +24,6 @@
 
 
 <div class="topnav">
-    <div class="header"></div>
     <a class="active" href="/">Forside</a>
     <a href="/EmptyFridge">Tøm køleskab</a>
     <a href="/foodbank">Foodbanks i KBH</a>
@@ -35,7 +32,12 @@
 </div>
 
 
-<h1> Red Mad <br> Hjælp Planeten </h1>
+<div class="scribble-container">
+    <img src="images/Scribble.png" alt="Scribble Background" style="width:900px; height: 350px;">
+    <div class="scribble-text">Hvert år smider danskerne mere end 700.000 tons mad ud.<br/>
+        Det svarer til, at hver femte indkøbsvogn ender direkte i skraldespanden.<br/>
+        Samtidig sulter flere end 800 millioner mennesker på verdensplan.</div>
+</div>
 
 
 
