Fixet forside og Empty Fridge styles. Mangler resize af billede af opskrifter

--- a/MadSpildProjekt/src/main/resources/static/Foodbank.css
+++ b/MadSpildProjekt/src/main/resources/static/Foodbank.css
@@ -41,7 +41,7 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
     font-size: 75px;
-    color: #44D7B6;
+    color: #9944d7;
     letter-spacing: -0.27px;
     text-align: center;}
 
