--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="EmptyFridge.css">
+
     <link rel="stylesheet" href="GlobalStylesheet.css">
+    <link rel="stylesheet" href="EmptyFridge.css">
     <link rel="stylesheet" href="footer.css">
     <meta charset="UTF-8">
     <title>Tøm køleskab</title>
@@ -25,7 +26,13 @@
 
 </div>
 
-<br/>
+    <div class="scribble-container-empty-frigde">
+        <img src="images/ScribbleFlipped.png" alt="Scribble Background" style="width:700px; height: 100px;">
+        <div class="scribble-text-empty-frigde">For at komme i gang, skal du notere, hvilke ingredienser du vil bruge.
+            <br/>Tast dem ind i søgefeltet, scroll ned og se vores forslag</div>
+    </div>
+
+
 
 <div class="searchbox">
 <input type="text" id="text" onkeyup="myFunction(event)" placeholder="Jeg vil lave mad som indeholder..">
@@ -257,10 +264,6 @@
         </div>
     </footer>
 </div>
-
-
-
-
 
 
 </body>
