--- a/MadSpildProjekt/src/main/resources/templates/Forside.html
+++ b/MadSpildProjekt/src/main/resources/templates/Forside.html
@@ -32,9 +32,9 @@
 </div>
 
 
-<div class="scribble-container">
-    <img src="images/Scribble.png" alt="Scribble Background" style="width:900px; height: 350px;">
-    <div class="scribble-text">Hvert år smider danskerne mere end 700.000 tons mad ud.<br/>
+<div class="scribble-container-frontpage">
+    <img src="images/ScribbleFlipped.png" alt="Scribble Background" style="width:900px; height: 350px; ">
+    <div class="scribble-text-frontpage">Hvert år smider danskerne mere end 700.000 tons mad ud.<br/>
         Det svarer til, at hver femte indkøbsvogn ender direkte i skraldespanden.<br/>
         Samtidig sulter flere end 800 millioner mennesker på verdensplan.</div>
 </div>
