--- a/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
+++ b/MadSpildProjekt/src/main/resources/static/EmptyFridge.css
@@ -92,17 +92,21 @@ input {
 .container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .container a {
     display: block;
-    width: 33%;
+    width: 25%;
+    justify-content: center;
+
 
 }
 
 .container img {
     width: 100%;
     height: auto;
+    justify-content: center;
 }
 
 
